Added a quick tutorial to work with a template

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,49 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Gulping boilerplate</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.min.css">
 	<script type="text/javascript" data-main="assets/js/app.js" src="assets/js/require.js"></script>
 </head>
 <body>
-	<!-- Automation frontend -->
-	<h1>Gulping boilerplate</h1>
+	<header class="container">
+		<section class="row">
+			<div class="col-md-4 col-md-offset-4">
+				<h1>Gulping boilerplate</h1>
+			</div>
+		</section>
+	</header>
+	<main class="container">
+		<section class="row">
+			<div class="col-md-12">
+				<div class="row">
+					<article class="col-md-8">
+						<header class="page-header">
+							<h3>How to use this boilerplate</h3>
+						</header>
+						<section class="page-content">
+							<h4>Basicly:</h4>
+							<p>You need to install global <mark>Node.js</mark>, <mark><abbr title="Node Packege Modules">NPM</abbr></mark>, <mark>Gulp.js</mark> and <mark>Bower</mark>.</p>
+							<h4>Next step:</h4>
+							<p>Navigate to the folder with your project and run the command <kbd>npm install</kbd>.</p>
+							<h4>Finaly:</h4>
+							<p>Run the command <kbd>gulp watch</kbd>.</p>
+						</section>
+					</article>
+					<aside class="col-md-4">
+						<nav class="panel panel-default">
+							<figure class="panel-body">
+								<h5>See more details:</h5>
+							</figure>
+							<ul class="nav nav-stacked">
+								<li><a href="https://github.com/savelevcorr/Gulping">Gulping on GitHub</a></li>
+								<li><a href="http://savelevandrey.ru">About Me</a></li>
+							</ul>
+						</nav>
+					</aside>
+				</div>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
