test gulp-rev plugins

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Gulping boilerplate</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.min.css?rev=0bdc449d5119045b42622ef7e71ccd15">
+	<link rel="stylesheet" type="text/css" href="assets/css/style-bf0f206a78.css">
 	<script type="text/javascript" data-main="assets/js/app.js" src="assets/js/require.js"></script>
 </head>
 <body>
